--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -108,8 +108,8 @@ steps:
                     ),
                   );
           
-            final width = gameWidth;
-            final height = gameHeight;
+            double get width => size.x;
+            double get height => size.y;
           
             @override
             FutureOr<void> onLoad() async {
@@ -182,10 +182,10 @@ steps:
                    );
            
           +  final rand = math.Random();
-             final width = gameWidth;
-             final height = gameHeight;
+             double get width => size.x;
+             double get height => size.y;
            
-          @@ -25,5 +27,13 @@ class BrickBreaker extends FlameGame {
+          @@ -25,5 +27,12 @@ class BrickBreaker extends FlameGame {
                camera.viewfinder.anchor = Anchor.topLeft;
            
                world.add(PlayArea());
@@ -193,8 +193,7 @@ steps:
           +    world.add(Ball(
           +        radius: ballRadius,
           +        position: size / 2,
-          +        velocity:
-          +            Vector2((rand.nextDouble() - 0.5) * gameWidth, gameHeight * 0.2)));
+          +        velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
           +
           +    debugMode = true;
              }
@@ -223,9 +222,7 @@ steps:
           import 'package:flame/components.dart';
           import 'package:flutter/material.dart';
           
-          import '../brick_breaker.dart';
-          
-          class Ball extends CircleComponent with HasGameReference<BrickBreaker> {
+          class Ball extends CircleComponent {
             Ball({
               required this.velocity,
               required super.position,
@@ -276,19 +273,20 @@ steps:
         patch-u: |
           --- b/brick_breaker/step_06/lib/src/components/ball.dart
           +++ a/brick_breaker/step_06/lib/src/components/ball.dart
-          @@ -3,8 +3,10 @@ import 'package:flame/components.dart';
+          @@ -2,7 +2,11 @@ import 'package:flame/collisions.dart';
+           import 'package:flame/components.dart';
            import 'package:flutter/material.dart';
            
-           import '../brick_breaker.dart';
+          -class Ball extends CircleComponent {
+          +import '../brick_breaker.dart';
           +import 'play_area.dart';
-           
-          -class Ball extends CircleComponent with HasGameReference<BrickBreaker> {
+          +
           +class Ball extends CircleComponent
           +    with CollisionCallbacks, HasGameReference<BrickBreaker> {
              Ball({
                required this.velocity,
                required super.position,
-          @@ -24,4 +26,23 @@ class Ball extends CircleComponent with HasGameReference<BrickBreaker> {
+          @@ -22,4 +26,23 @@ class Ball extends CircleComponent {
                super.update(dt);
                position += velocity * dt;
              }
@@ -305,7 +303,7 @@ steps:
           +      } else if (intersectionPoints.first.x >= game.width) {
           +        if (velocity.x > 0) velocity.x = -velocity.x;
           +      } else if (intersectionPoints.first.y >= game.height) {
-          +        game.world.remove(this);
+          +        removeFromParent();
           +      }
           +    } else {
           +      debugPrint('collision with $other');
@@ -346,20 +344,14 @@ steps:
              BrickBreaker()
                  : super(
                      camera: CameraComponent.withFixedResolution(
-          @@ -29,11 +33,30 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
-               world.add(PlayArea());
-           
-               world.add(Ball(
-          +        batWidth: batWidth,
-                   radius: ballRadius,
+          @@ -33,6 +37,24 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
                    position: size / 2,
-                   velocity:
-                       Vector2((rand.nextDouble() - 0.5) * gameWidth, gameHeight * 0.2)));
+                   velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
            
           +    world.add(Bat(
           +        size: Vector2(batWidth, batHeight),
           +        cornerRadius: const Radius.circular(ballRadius / 2),
-          +        position: Vector2(gameWidth / 2, gameHeight * 0.95)));
+          +        position: Vector2(width / 2, height * 0.95)));
           +
                debugMode = true;
              }
@@ -405,27 +397,11 @@ steps:
            import 'play_area.dart';
            
            class Ball extends CircleComponent
-          @@ -11,6 +13,7 @@ class Ball extends CircleComponent
-               required this.velocity,
-               required super.position,
-               required double radius,
-          +    required this.batWidth,
-             }) : super(
-                       radius: radius,
-                       anchor: Anchor.center,
-          @@ -20,6 +23,7 @@ class Ball extends CircleComponent
-                       children: [CircleHitbox(radius: radius)]);
-           
-             final Vector2 velocity;
-          +  final double batWidth;
-           
-             @override
-             void update(double dt) {
-          @@ -39,7 +43,15 @@ class Ball extends CircleComponent
+          @@ -39,7 +41,15 @@ class Ball extends CircleComponent
                  } else if (intersectionPoints.first.x >= game.width) {
                    if (velocity.x > 0) velocity.x = -velocity.x;
                  } else if (intersectionPoints.first.y >= game.height) {
-          -        game.world.remove(this);
+          -        removeFromParent();
           +        add(RemoveEffect(
           +          delay: 0.35,
           +        ));
@@ -434,7 +410,7 @@ steps:
           +      if (velocity.y > 0) {
           +        velocity.y = -velocity.y;
           +        velocity.x = velocity.x +
-          +            (position.x - other.position.x) / batWidth * game.width * 0.3;
+          +            (position.x - other.position.x) / other.size.x * game.width * 0.3;
                  }
                } else {
                  debugPrint('collision with $other');
@@ -520,17 +496,17 @@ steps:
         patch-u: |
           --- b/brick_breaker/step_08/lib/src/brick_breaker.dart
           +++ a/brick_breaker/step_08/lib/src/brick_breaker.dart
-          @@ -34,6 +34,7 @@ class BrickBreaker extends FlameGame
+          @@ -33,6 +33,7 @@ class BrickBreaker extends FlameGame
+               world.add(PlayArea());
            
                world.add(Ball(
-                   batWidth: batWidth,
           +        difficultyModifier: difficultyModifier,
                    radius: ballRadius,
                    position: size / 2,
-                   velocity:
-          @@ -44,6 +45,18 @@ class BrickBreaker extends FlameGame
+                   velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
+          @@ -42,6 +43,18 @@ class BrickBreaker extends FlameGame
                    cornerRadius: const Radius.circular(ballRadius / 2),
-                   position: Vector2(gameWidth / 2, gameHeight * 0.95)));
+                   position: Vector2(width / 2, height * 0.95)));
            
           +    await world.addAll([
           +      for (var i = 0; i < brickColors.length; i++)
@@ -591,25 +567,25 @@ steps:
            import 'play_area.dart';
            
            class Ball extends CircleComponent
-          @@ -14,6 +15,7 @@ class Ball extends CircleComponent
+          @@ -13,6 +14,7 @@ class Ball extends CircleComponent
+               required this.velocity,
                required super.position,
                required double radius,
-               required this.batWidth,
           +    required this.difficultyModifier,
              }) : super(
                        radius: radius,
                        anchor: Anchor.center,
-          @@ -24,6 +26,7 @@ class Ball extends CircleComponent
+          @@ -22,6 +24,7 @@ class Ball extends CircleComponent
+                       children: [CircleHitbox(radius: radius)]);
            
              final Vector2 velocity;
-             final double batWidth;
           +  final double difficultyModifier;
            
              @override
              void update(double dt) {
-          @@ -53,8 +56,17 @@ class Ball extends CircleComponent
+          @@ -51,8 +54,17 @@ class Ball extends CircleComponent
                    velocity.x = velocity.x +
-                       (position.x - other.position.x) / batWidth * game.width * 0.3;
+                       (position.x - other.position.x) / other.size.x * game.width * 0.3;
                  }
           -    } else {
           -      debugPrint('collision with $other');
@@ -667,7 +643,7 @@ steps:
                 Set<Vector2> intersectionPoints, PositionComponent other) {
               super.onCollisionStart(intersectionPoints, other);
               if (other is Ball) {
-                game.world.remove(this);
+                removeFromParent();
           
                 if (game.world.children.whereType<Brick>().length == 1) {
                   game.world.removeAll(game.world.children.whereType<Ball>());
@@ -723,8 +699,8 @@ steps:
                  : super(
                      camera: CameraComponent.withFixedResolution(
           @@ -24,6 +28,22 @@ class BrickBreaker extends FlameGame
-             final width = gameWidth;
-             final height = gameHeight;
+             double get width => size.x;
+             double get height => size.y;
            
           +  late PlayState _playState;
           +  PlayState get playState => _playState;
@@ -762,18 +738,18 @@ steps:
           +    playState = PlayState.playing;
           +
                world.add(Ball(
-                   batWidth: batWidth,
                    difficultyModifier: difficultyModifier,
-          @@ -45,7 +77,7 @@ class BrickBreaker extends FlameGame
+                   radius: ballRadius,
+          @@ -43,7 +75,7 @@ class BrickBreaker extends FlameGame
                    cornerRadius: const Radius.circular(ballRadius / 2),
-                   position: Vector2(gameWidth / 2, gameHeight * 0.95)));
+                   position: Vector2(width / 2, height * 0.95)));
            
           -    await world.addAll([
           +    world.addAll([
                  for (var i = 0; i < brickColors.length; i++)
                    for (var j = 1; j <= 5; j++)
                      Brick(
-          @@ -56,8 +88,12 @@ class BrickBreaker extends FlameGame
+          @@ -54,8 +86,12 @@ class BrickBreaker extends FlameGame
                        brickColors[i],
                      ),
                ]);
@@ -787,7 +763,7 @@ steps:
              }
            
              @override
-          @@ -69,7 +105,13 @@ class BrickBreaker extends FlameGame
+          @@ -67,7 +103,13 @@ class BrickBreaker extends FlameGame
                    world.children.whereType<Bat>().first.moveBy(-batStep);
                  case LogicalKeyboardKey.arrowRight:
                    world.children.whereType<Bat>().first.moveBy(batStep);
@@ -806,7 +782,7 @@ steps:
         patch-u: |
           --- b/brick_breaker/step_09/lib/src/components/ball.dart
           +++ a/brick_breaker/step_09/lib/src/components/ball.dart
-          @@ -47,8 +47,10 @@ class Ball extends CircleComponent
+          @@ -45,8 +45,10 @@ class Ball extends CircleComponent
                    if (velocity.x > 0) velocity.x = -velocity.x;
                  } else if (intersectionPoints.first.y >= game.height) {
                    add(RemoveEffect(
@@ -825,7 +801,7 @@ steps:
           --- b/brick_breaker/step_09/lib/src/components/brick.dart
           +++ a/brick_breaker/step_09/lib/src/components/brick.dart
           @@ -28,6 +28,7 @@ class Brick extends RectangleComponent
-                 game.world.remove(this);
+                 removeFromParent();
            
                  if (game.world.children.whereType<Brick>().length == 1) {
           +        game.playState = PlayState.won;
@@ -975,8 +951,8 @@ steps:
            
           +  final ValueNotifier<int> score = ValueNotifier(0);
              final rand = math.Random();
-             final width = gameWidth;
-             final height = gameHeight;
+             double get width => size.x;
+             double get height => size.y;
           @@ -63,6 +64,7 @@ class BrickBreaker extends FlameGame
                world.removeAll(world.children.whereType<Brick>());
            
@@ -984,7 +960,7 @@ steps:
           +    score.value = 0;
            
                world.add(Ball(
-                   batWidth: batWidth,
+                   difficultyModifier: difficultyModifier,
       - name: Patch lib/src/components/brick.dart
         path: brick_breaker/lib/src/components/brick.dart
         patch-u: |
@@ -993,7 +969,7 @@ steps:
           @@ -26,6 +26,7 @@ class Brick extends RectangleComponent
                super.onCollisionStart(intersectionPoints, other);
                if (other is Ball) {
-                 game.world.remove(this);
+                 removeFromParent();
           +      game.score.value++;
            
                  if (game.world.children.whereType<Brick>().length == 1) {
