--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -63,7 +63,7 @@ steps:
           version: 0.1.0
           
           environment:
-            sdk: ^3.1.1
+            sdk: ^3.2.0-0
           
           dependencies:
             flutter:
