--- a/namer/codelab_rebuild.yaml
+++ b/namer/codelab_rebuild.yaml
@@ -17,7 +17,7 @@ steps:
           version: 0.0.1+1
 
           environment:
-            sdk: ^3.1.1
+            sdk: ^3.2.0-0
 
           dependencies:
             flutter:
