--- a/tooling/claat_export_images/pubspec.yaml
+++ b/tooling/claat_export_images/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 repository: https://github.com/flutter/codelabs
 
 environment:
-  sdk: ^3.1.0
+  sdk: ^3.2.0-0
 
 dependencies:
   args: ^2.4.2
