--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -205,7 +205,7 @@ steps:
              double get width => size.x;
              double get height => size.y;
            
-          @@ -25,5 +27,12 @@ class BrickBreaker extends FlameGame {
+          @@ -25,5 +27,14 @@ class BrickBreaker extends FlameGame {
                camera.viewfinder.anchor = Anchor.topLeft;
            
                world.add(PlayArea());
@@ -213,7 +213,9 @@ steps:
           +    world.add(Ball(
           +        radius: ballRadius,
           +        position: size / 2,
-          +        velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
+          +        velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)
+          +            .normalized()
+          +          ..scale(height / 4)));
           +
           +    debugMode = true;
              }
@@ -393,9 +395,9 @@ steps:
              BrickBreaker()
                  : super(
                      camera: CameraComponent.withFixedResolution(
-          @@ -33,6 +37,24 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
-                   position: size / 2,
-                   velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
+          @@ -35,6 +39,24 @@ class BrickBreaker extends FlameGame with HasCollisionDetection {
+                       .normalized()
+                     ..scale(height / 4)));
            
           +    world.add(Bat(
           +        size: Vector2(batWidth, batHeight),
@@ -552,8 +554,8 @@ steps:
           +        difficultyModifier: difficultyModifier,
                    radius: ballRadius,
                    position: size / 2,
-                   velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)));
-          @@ -42,6 +43,18 @@ class BrickBreaker extends FlameGame
+                   velocity: Vector2((rand.nextDouble() - 0.5) * width, height * 0.2)
+          @@ -44,6 +45,18 @@ class BrickBreaker extends FlameGame
                    cornerRadius: const Radius.circular(ballRadius / 2),
                    position: Vector2(width / 2, height * 0.95)));
            
@@ -789,7 +791,7 @@ steps:
                world.add(Ball(
                    difficultyModifier: difficultyModifier,
                    radius: ballRadius,
-          @@ -43,7 +75,7 @@ class BrickBreaker extends FlameGame
+          @@ -45,7 +77,7 @@ class BrickBreaker extends FlameGame
                    cornerRadius: const Radius.circular(ballRadius / 2),
                    position: Vector2(width / 2, height * 0.95)));
            
@@ -798,7 +800,7 @@ steps:
                  for (var i = 0; i < brickColors.length; i++)
                    for (var j = 1; j <= 5; j++)
                      Brick(
-          @@ -54,8 +86,12 @@ class BrickBreaker extends FlameGame
+          @@ -56,8 +88,12 @@ class BrickBreaker extends FlameGame
                        brickColors[i],
                      ),
                ]);
@@ -812,7 +814,7 @@ steps:
              }
            
              @override
-          @@ -67,7 +103,13 @@ class BrickBreaker extends FlameGame
+          @@ -69,7 +105,13 @@ class BrickBreaker extends FlameGame
                    world.children.whereType<Bat>().first.moveBy(-batStep);
                  case LogicalKeyboardKey.arrowRight:
                    world.children.whereType<Bat>().first.moveBy(batStep);
