--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -1128,16 +1128,16 @@ steps:
             const OverlayScreen({
               super.key,
               required this.title,
-              this.subtitle,
+              required this.subtitle,
             });
           
             final String title;
-            final String? subtitle;
+            final String subtitle;
           
             @override
             Widget build(BuildContext context) {
               return Container(
-                alignment: Alignment(0, subtitle != null ? -0.15 : -0.2),
+                alignment: const Alignment(0, -0.15),
                 child: Column(
                   mainAxisSize: MainAxisSize.min,
                   children: [
@@ -1145,17 +1145,15 @@ steps:
                       title,
                       style: Theme.of(context).textTheme.headlineLarge,
                     ).animate().slideY(duration: 750.ms, begin: -3, end: 0),
-                    if (subtitle != null) ...[
-                      const SizedBox(height: 16),
-                      Text(
-                        subtitle!,
-                        style: Theme.of(context).textTheme.headlineSmall,
-                      )
-                          .animate(onPlay: (controller) => controller.repeat())
-                          .fadeIn(duration: 1.seconds)
-                          .then()
-                          .fadeOut(duration: 1.seconds),
-                    ],
+                    const SizedBox(height: 16),
+                    Text(
+                      subtitle,
+                      style: Theme.of(context).textTheme.headlineSmall,
+                    )
+                        .animate(onPlay: (controller) => controller.repeat())
+                        .fadeIn(duration: 1.seconds)
+                        .then()
+                        .fadeOut(duration: 1.seconds),
                   ],
                 ),
               );
