--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -313,7 +313,7 @@ steps:
                          ..color = const Color(0xff1e6091)
           -              ..style = PaintingStyle.fill);
           +              ..style = PaintingStyle.fill,
-          +            children: [CircleHitbox(radius: radius)]);
+          +            children: [CircleHitbox()]);
            
              final Vector2 velocity;
            
@@ -627,7 +627,7 @@ steps:
                        radius: radius,
                        anchor: Anchor.center,
           @@ -22,6 +24,7 @@ class Ball extends CircleComponent
-                       children: [CircleHitbox(radius: radius)]);
+                       children: [CircleHitbox()]);
            
              final Vector2 velocity;
           +  final double difficultyModifier;
