--- a/brick_breaker/codelab_rebuild.yaml
+++ b/brick_breaker/codelab_rebuild.yaml
@@ -328,11 +328,11 @@ steps:
           +    super.onCollisionStart(intersectionPoints, other);
           +    if (other is PlayArea) {
           +      if (intersectionPoints.first.y <= 0) {
-          +        if (velocity.y < 0) velocity.y = -velocity.y;
+          +        velocity.y = -velocity.y;
           +      } else if (intersectionPoints.first.x <= 0) {
-          +        if (velocity.x < 0) velocity.x = -velocity.x;
+          +        velocity.x = -velocity.x;
           +      } else if (intersectionPoints.first.x >= game.width) {
-          +        if (velocity.x > 0) velocity.x = -velocity.x;
+          +        velocity.x = -velocity.x;
           +      } else if (intersectionPoints.first.y >= game.height) {
           +        removeFromParent();
           +      }
@@ -448,23 +448,22 @@ steps:
            import 'play_area.dart';
            
            class Ball extends CircleComponent
-          @@ -39,7 +41,15 @@ class Ball extends CircleComponent
+          @@ -39,8 +41,14 @@ class Ball extends CircleComponent
                  } else if (intersectionPoints.first.x >= game.width) {
-                   if (velocity.x > 0) velocity.x = -velocity.x;
+                   velocity.x = -velocity.x;
                  } else if (intersectionPoints.first.y >= game.height) {
           -        removeFromParent();
           +        add(RemoveEffect(
           +          delay: 0.35,
           +        ));
-          +      }
-          +    } else if (other is Bat) {
-          +      if (velocity.y > 0) {
-          +        velocity.y = -velocity.y;
-          +        velocity.x = velocity.x +
-          +            (position.x - other.position.x) / other.size.x * game.width * 0.3;
                  }
+          +    } else if (other is Bat) {
+          +      velocity.y = -velocity.y;
+          +      velocity.x = velocity.x +
+          +          (position.x - other.position.x) / other.size.x * game.width * 0.3;
                } else {
                  debugPrint('collision with $other');
+               }
       - name: Patch lib/src/components/components.dart
         path: brick_breaker/lib/src/components/components.dart
         patch-u: |
@@ -634,21 +633,21 @@ steps:
            
              @override
              void update(double dt) {
-          @@ -51,8 +54,17 @@ class Ball extends CircleComponent
-                   velocity.x = velocity.x +
-                       (position.x - other.position.x) / other.size.x * game.width * 0.3;
-                 }
+          @@ -49,8 +52,17 @@ class Ball extends CircleComponent
+                 velocity.y = -velocity.y;
+                 velocity.x = velocity.x +
+                     (position.x - other.position.x) / other.size.x * game.width * 0.3;
           -    } else {
           -      debugPrint('collision with $other');
           +    } else if (other is Brick) {
           +      if (position.y < other.position.y - other.size.y / 2) {
-          +        if (velocity.y > 0) velocity.y = -velocity.y;
+          +        velocity.y = -velocity.y;
           +      } else if (position.y > other.position.y + other.size.y / 2) {
-          +        if (velocity.y < 0) velocity.y = -velocity.y;
+          +        velocity.y = -velocity.y;
           +      } else if (position.x < other.position.x) {
-          +        if (velocity.x > 0) velocity.x = -velocity.x;
+          +        velocity.x = -velocity.x;
           +      } else if (position.x > other.position.x) {
-          +        if (velocity.x < 0) velocity.x = -velocity.x;
+          +        velocity.x = -velocity.x;
           +      }
           +      velocity.setFrom(velocity * difficultyModifier);
                }
@@ -693,13 +692,11 @@ steps:
             void onCollisionStart(
                 Set<Vector2> intersectionPoints, PositionComponent other) {
               super.onCollisionStart(intersectionPoints, other);
-              if (other is Ball) {
-                removeFromParent();
+              removeFromParent();
           
-                if (game.world.children.whereType<Brick>().length == 1) {
-                  game.world.removeAll(game.world.children.whereType<Ball>());
-                  game.world.removeAll(game.world.children.whereType<Bat>());
-                }
+              if (game.world.children.whereType<Brick>().length == 1) {
+                game.world.removeAll(game.world.children.whereType<Ball>());
+                game.world.removeAll(game.world.children.whereType<Bat>());
               }
             }
           }
@@ -833,7 +830,7 @@ steps:
           --- b/brick_breaker/step_09/lib/src/components/ball.dart
           +++ a/brick_breaker/step_09/lib/src/components/ball.dart
           @@ -45,8 +45,10 @@ class Ball extends CircleComponent
-                   if (velocity.x > 0) velocity.x = -velocity.x;
+                   velocity.x = -velocity.x;
                  } else if (intersectionPoints.first.y >= game.height) {
                    add(RemoveEffect(
           -          delay: 0.35,
@@ -844,20 +841,20 @@ steps:
           +            }));
                  }
                } else if (other is Bat) {
-                 if (velocity.y > 0) {
+                 velocity.y = -velocity.y;
       - name: Patch lib/src/components/brick.dart
         path: brick_breaker/lib/src/components/brick.dart
         patch-u: |
           --- b/brick_breaker/step_09/lib/src/components/brick.dart
           +++ a/brick_breaker/step_09/lib/src/components/brick.dart
-          @@ -28,6 +28,7 @@ class Brick extends RectangleComponent
-                 removeFromParent();
+          @@ -27,6 +27,7 @@ class Brick extends RectangleComponent
+               removeFromParent();
            
-                 if (game.world.children.whereType<Brick>().length == 1) {
-          +        game.playState = PlayState.won;
-                   game.world.removeAll(game.world.children.whereType<Ball>());
-                   game.world.removeAll(game.world.children.whereType<Bat>());
-                 }
+               if (game.world.children.whereType<Brick>().length == 1) {
+          +      game.playState = PlayState.won;
+                 game.world.removeAll(game.world.children.whereType<Ball>());
+                 game.world.removeAll(game.world.children.whereType<Bat>());
+               }
       - name: Mkdir lib/src/widgets
         mkdir: brick_breaker/lib/src/widgets
       - name: Add lib/src/widgets/game_app.dart
@@ -870,21 +867,8 @@ steps:
           import '../brick_breaker.dart';
           import '../config.dart';
           
-          class GameApp extends StatefulWidget {
+          class GameApp extends StatelessWidget {
             const GameApp({super.key});
-          
-            @override
-            State<GameApp> createState() => _GameAppState();
-          }
-          
-          class _GameAppState extends State<GameApp> {
-            late final BrickBreaker game;
-          
-            @override
-            void initState() {
-              super.initState();
-              game = BrickBreaker();
-            }
           
             @override
             Widget build(BuildContext context) {
@@ -917,8 +901,8 @@ steps:
                             child: SizedBox(
                               width: gameWidth,
                               height: gameHeight,
-                              child: GameWidget(
-                                game: game,
+                              child: GameWidget.controlled(
+                                gameFactory: BrickBreaker.new,
                                 overlayBuilderMap: {
                                   PlayState.welcome.name: (context, game) => Center(
                                         child: Text(
@@ -1027,29 +1011,47 @@ steps:
         patch-u: |
           --- b/brick_breaker/step_10/lib/src/components/brick.dart
           +++ a/brick_breaker/step_10/lib/src/components/brick.dart
-          @@ -26,6 +26,7 @@ class Brick extends RectangleComponent
+          @@ -25,6 +25,7 @@ class Brick extends RectangleComponent
+                 Set<Vector2> intersectionPoints, PositionComponent other) {
                super.onCollisionStart(intersectionPoints, other);
-               if (other is Ball) {
-                 removeFromParent();
-          +      game.score.value++;
+               removeFromParent();
+          +    game.score.value++;
            
-                 if (game.world.children.whereType<Brick>().length == 1) {
-                   game.playState = PlayState.won;
+               if (game.world.children.whereType<Brick>().length == 1) {
+                 game.playState = PlayState.won;
       - name: Patch lib/src/widgets/game_app.dart
         path: brick_breaker/lib/src/widgets/game_app.dart
         patch-u: |
           --- b/brick_breaker/step_10/lib/src/widgets/game_app.dart
           +++ a/brick_breaker/step_10/lib/src/widgets/game_app.dart
-          @@ -4,6 +4,8 @@ import 'package:google_fonts/google_fonts.dart';
+          @@ -4,10 +4,25 @@ import 'package:google_fonts/google_fonts.dart';
            
            import '../brick_breaker.dart';
            import '../config.dart';
           +import 'overlay_screen.dart';
           +import 'score_card.dart';
            
-           class GameApp extends StatefulWidget {
+          -class GameApp extends StatelessWidget {
+          +class GameApp extends StatefulWidget {
              const GameApp({super.key});
-          @@ -48,37 +50,38 @@ class _GameAppState extends State<GameApp> {
+           
+          +  @override
+          +  State<GameApp> createState() => _GameAppState();
+          +}
+          +
+          +class _GameAppState extends State<GameApp> {
+          +  late final BrickBreaker game;
+          +
+          +  @override
+          +  void initState() {
+          +    super.initState();
+          +    game = BrickBreaker();
+          +  }
+          +
+             @override
+             Widget build(BuildContext context) {
+               return MaterialApp(
+          @@ -35,37 +50,38 @@ class GameApp extends StatelessWidget {
                        child: Padding(
                          padding: const EdgeInsets.all(16),
                          child: Center(
@@ -1057,8 +1059,8 @@ steps:
           -                  child: SizedBox(
           -                    width: gameWidth,
           -                    height: gameHeight,
-          -                    child: GameWidget(
-          -                      game: game,
+          -                    child: GameWidget.controlled(
+          -                      gameFactory: BrickBreaker.new,
           -                      overlayBuilderMap: {
           -                        PlayState.welcome.name: (context, game) => Center(
           -                              child: Text(
