`webview_flutter` Use `context.mounted` to guard `context` usage

--- a/webview_flutter/codelab_rebuild.yaml
+++ b/webview_flutter/codelab_rebuild.yaml
@@ -539,7 +539,7 @@ steps:
           +          case _MenuOptions.userAgent:
           +            final userAgent = await widget.controller
           +                .runJavaScriptReturningResult('navigator.userAgent');
-          +            if (!mounted) return;
+          +            if (!context.mounted) return;
           +            ScaffoldMessenger.of(context).showSnackBar(SnackBar(
           +              content: Text('$userAgent'),
           +            ));
@@ -791,7 +791,7 @@ steps:
           +  Future<void> _onListCookies(WebViewController controller) async {
           +    final String cookies = await controller
           +        .runJavaScriptReturningResult('document.cookie') as String;
-          +    if (!mounted) return;
+          +    if (!context.mounted) return;
           +    ScaffoldMessenger.of(context).showSnackBar(
           +      SnackBar(
           +        content: Text(cookies.isNotEmpty ? cookies : 'There are no cookies.'),
@@ -805,7 +805,7 @@ steps:
           +    if (!hadCookies) {
           +      message = 'There were no cookies to clear.';
           +    }
-          +    if (!mounted) return;
+          +    if (!context.mounted) return;
           +    ScaffoldMessenger.of(context).showSnackBar(
           +      SnackBar(
           +        content: Text(message),
@@ -817,7 +817,7 @@ steps:
           +    await controller.runJavaScript('''var date = new Date();
           +    date.setTime(date.getTime()+(30*24*60*60*1000));
           +    document.cookie = "FirstName=John; expires=" + date.toGMTString();''');
-          +    if (!mounted) return;
+          +    if (!context.mounted) return;
           +    ScaffoldMessenger.of(context).showSnackBar(
           +      const SnackBar(
           +        content: Text('Custom cookie added.'),
@@ -829,7 +829,7 @@ steps:
           +    await cookieManager.setCookie(
           +      const WebViewCookie(name: 'foo', value: 'bar', domain: 'flutter.dev'),
           +    );
-          +    if (!mounted) return;
+          +    if (!context.mounted) return;
           +    ScaffoldMessenger.of(context).showSnackBar(
           +      const SnackBar(
           +        content: Text('Custom cookie is set.'),
@@ -840,7 +840,7 @@ steps:
           +  Future<void> _onRemoveCookie(WebViewController controller) async {
           +    await controller.runJavaScript(
           +        'document.cookie="FirstName=John; expires=Thu, 01 Jan 1970 00:00:00 UTC" ');
-          +    if (!mounted) return;
+          +    if (!context.mounted) return;
           +    ScaffoldMessenger.of(context).showSnackBar(
           +      const SnackBar(
           +        content: Text('Custom cookie removed.'),
@@ -925,13 +925,13 @@ steps:
                      case _MenuOptions.removeCookie:
                        await _onRemoveCookie(widget.controller);
           +          case _MenuOptions.loadFlutterAsset:
-          +            if (!mounted) return;
+          +            if (!context.mounted) return;
           +            await _onLoadFlutterAssetExample(widget.controller, context);
           +          case _MenuOptions.loadLocalFile:
-          +            if (!mounted) return;
+          +            if (!context.mounted) return;
           +            await _onLoadLocalFileExample(widget.controller, context);
           +          case _MenuOptions.loadHtmlString:
-          +            if (!mounted) return;
+          +            if (!context.mounted) return;
           +            await _onLoadHtmlStringExample(widget.controller, context);
                    }
                  },
