Make Flutter `master` channel happy (#2153)
If you need help, consider asking for advice on the #hackers-devrel channel on [Discord].

[Effective Dart: Style]: https://dart.dev/guides/language/effective-dart/style

--- a/webview_flutter/codelab_rebuild.yaml
+++ b/webview_flutter/codelab_rebuild.yaml
@@ -539,7 +539,7 @@ steps:
           +          case _MenuOptions.userAgent:
           +            final userAgent = await widget.controller
           +                .runJavaScriptReturningResult('navigator.userAgent');
-          +            if (!mounted) return;
+          +            if (!context.mounted) return;
           +            ScaffoldMessenger.of(context).showSnackBar(SnackBar(
           +              content: Text('$userAgent'),
           +            ));
