`adaptive_app` Add trailing comma

--- a/adaptive_app/codelab_rebuild.yaml
+++ b/adaptive_app/codelab_rebuild.yaml
@@ -521,7 +521,7 @@ steps:
                     gradient: LinearGradient(
                       colors: [
                         Colors.transparent,
-                        Theme.of(context).colorScheme.background
+                        Theme.of(context).colorScheme.background,
                       ],
                       begin: Alignment.topCenter,
                       end: Alignment.bottomCenter,
